--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,8 @@ add_library(${PROJECT_NAME} STATIC oxc.cpp)
 target_link_libraries(${PROJECT_NAME} boost_multiprecision)
 
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
+
+target_include_directories(${PROJECT_NAME}
+  PUBLIC
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+)
